analyse doc done
